--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -1,7 +1,8 @@
 {
-  "UseInMemoryDatabase": true,
+  "UseInMemoryDatabase": false,
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=LowCostFligtsBrowserDb;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=LowCostFligtsBrowserDb;Trusted_Connection=True;MultipleActiveResultSets=true;",
+    "LowCostFlightDb": "Server=(localdb)\\ProjectsV13;Database=LowCostFlightDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
