First version of API completed.

--- a/src/WebUI/Properties/launchSettings.json
+++ b/src/WebUI/Properties/launchSettings.json
@@ -1,9 +1,9 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:61846",
+      "applicationUrl": "http://localhost:61845",
       "sslPort": 44312
     }
   },
@@ -11,6 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "https://localhost:44312/",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
       }
@@ -18,10 +19,10 @@
     "LowCostFligtsBrowser.WebUI": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
