--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -16,5 +16,16 @@
       }
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Secrets": {
+    "AmadeusData": {
+      "APIKey": "3ORoZcNxzz0FI28ulQU2pkEzAD04GRHC",
+      "APISecret": "agnhCJaEG9OHTm8Y"
+    }
+  },
+  "Variables": {
+    "DurationOfCache": "00-00-30"    
+
+  }
+
 }
