--- a/src/WebUI/ClientApp/package.json
+++ b/src/WebUI/ClientApp/package.json
@@ -12,11 +12,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "10.1.0",
+    "@angular/animations": "^10.1.0",
+    "@angular/cdk": "^11.2.4",
     "@angular/common": "10.1.0",
     "@angular/compiler": "10.1.0",
     "@angular/core": "10.1.0",
     "@angular/forms": "10.1.0",
+    "@angular/material": "^11.2.4",
     "@angular/platform-browser": "10.1.0",
     "@angular/platform-browser-dynamic": "10.1.0",
     "@angular/platform-server": "10.1.0",
