--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -2,7 +2,7 @@
   "UseInMemoryDatabase": false,
   "ConnectionStrings": {
     //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=LowCostFligtsBrowserDb;Trusted_Connection=True;MultipleActiveResultSets=true;",
-    "LowCostFlightDb": "Server=(localdb)\\ProjectsV13;Database=LowCostFlightDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "LowCostFlightDb": "Server=tcp:flightsdb.database.windows.net,1433;Initial Catalog=flightsDB;Persist Security Info=False;User ID=gazda;Password=JaSamGlavni1996;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
