--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,3 +43,16 @@ steps:
     workingDir: $(Build.Repository.LocalPath)/src/WebUI/ClientApp
     verbose: false
     customCommand: 'run build'
+
+- task: DotNetCoreCLI@2
+  displayName: "Publish"
+  inputs:
+        command: 'publish'
+        publishWebProjects: true
+        arguments: ' --configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+        zipAfterPublish: true
+- task: PublishBuildArtifacts@1
+  displayName: "Upload Artifacts"
+  inputs:
+        pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
+        artifactName: 'buildArtifacts' 
